force-app/main/default/objects/Sales_Alerts__c/Sales_Alerts__c.object-meta.xml
<CustomObject>
    <label>Sales Alert</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Sales Alerts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>