force-app/main/default/objects/Sales_Alerts__c/fields/AI_Identified_Action_2__c.field-meta.xml
<CustomField>
    <fullName>AI_Identified_Action_2__c</fullName>
    <label>AI Identified Action 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>