force-app/main/default/objects/Sales_Alerts__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deals Needing Attention</fullName>
            </value>
            <value>
                <fullName>Follow Ups</fullName>
            </value>
            <value>
                <fullName>Grow and Protect</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>