force-app/main/default/objects/Sales_Alerts__c/fields/Trigger_Reason__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Reason__c</fullName>
    <label>Trigger Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>