force-app/main/default/objects/Sales_Alerts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Record_Id__c</columns>
    <columns>Trigger_Reason__c</columns>
    <columns>Object__c</columns>
    <columns>AI_Identified_Action_1__c</columns>
    <columns>AI_Identified_Action_2__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>